фикс теста создания рекомендации запроса